# climark

./: .envrc  .gitignore  Cargo.toml  build.rs  completions.fish  cookie.sh  flake.nix
completions/: _climark  _climark.ps1  climark.bash  climark.fish
crowdmark/: Cargo.toml
crowdmark/src/: error.rs  lib.rs  login.rs  upload.rs
src/: assessments.rs  cli.rs  courses.rs  error.rs  keyring.rs  login.rs  main.rs  upload.rs
