[workspace]
members = ["crowdmark"]

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.226", features = ["derive"] }

[package]
name = "climark"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive", "env"] }
crowdmark = { path = "crowdmark" }
tokio = { version = "1.47.1", features = ["full"] }
serde.workspace = true
serde_json = "1.0.145"
chrono = "0.4.42"
clap_complete = "4.5.58"
tabled = "0.20.0"
hayro = "0.4.0"
hayro-interpret = "0.4.0"

[build-dependencies]
clap = { version = "4.5.48", features = ["derive", "env"] }
clap_complete = "4.5.58"
