[workspace]
members = ["crowdmark"]

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.226", features = ["derive"] }

[package]
name = "climark"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive", "env"] }
clap_complete = "4.5.58"
crowdmark = { path = "crowdmark" }
hayro = "0.4.0"
hayro-interpret = "0.4.0"
image = "0.25.9"
reqwest = { version = "0.12.24", features = ["multipart"] }
serde.workspace = true
serde_json = "1.0.145"
tabled = "0.20.0"
thiserror = "2.0.17"
#tabled = "0.20.0"
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
clap = { version = "4.5.48", features = ["derive", "env"] }
clap_complete = "4.5.58"
