[workspace]
members = ["crowdmark"]

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[package]
name = "climark"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap = { version = "4.5.48", features = ["derive", "env"] }
clap_complete = "4.5.58"
comfy-table = "7.2.1"
crowdmark = { path = "crowdmark" }
hayro = "0.4.0"
hayro-interpret = "0.4.0"
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
keyring = { version = "3.6.3", features = ["linux-native-sync-persistent"] }
rpassword = "7.4.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
whoami = { version = "1.6.1", default-features = false }

[build-dependencies]
clap = { version = "4.5.48", default-features = false, features = ["derive", "env"] }
clap_complete = "4.5.58"
