[package]
name = "crowdmark"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
regex-lite = "0.1.8"
reqwest = { version = "0.12.23", features = ["cookies", "json", "multipart"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { version = "1.18.1", features = ["v4"] }
