[package]
name = "crowdmark"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
regex-lite = "0.1.8"
reqwest = { version = "0.13.1", features = ["cookies", "form", "json", "multipart", "query"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }
